--- a/web-app/css/media.css
+++ b/web-app/css/media.css
@@ -84,7 +84,7 @@
         width:15%;
     }
 
-    span.col-impact-animals-text-two{
+    span.col-impact-animals-text-two, span.col-impact-elderly-text-two{
         width:18%;
     }
 
